# ghu-pm-buddy

./: README.md  SUPPORT.md  azure.yaml  demo-script.md  devcontainer.json  mcp.json  quickstart.md
.github/actions/run-pm-buddy/: README.md  action.yml
.github/workflows/: pm-buddy.yml  test-run-pm-buddy.yml
infra/: main.bicep
infra/core/ai/: ai-project.bicep
infra/core/search/: azure_ai_search.bicep
pm-buddy/: pyproject.toml
src/: .dockerignore  .env.example  Dockerfile  agent.yaml  pyproject.toml
src/docs/: usage.ipynb
src/pm_buddy/: __init__.py  main.py  tracing.py  utils.py  workflow.py
src/pm_buddy/agents/: __init__.py  format_agent.py  investigate_agent.py  refine_agent.py  root_cause_agent.py
src/pm_buddy/agents/prompts/: format_agent.prompt  investigate_agent.prompt  refine_agent.prompt  root_cause_analysis_agent.prompt
src/pm_buddy/executors/: fallback.py
src/pm_buddy/extensions/: chat_clients.py  token_provider.py
src/pm_buddy/tools/: toolkits.py
