[project]
name = "pm_buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251007",
    "agent-framework-devui>=1.0.0b251007",
    "azure-ai-agentserver-core>=1.0.0b4",
    "azure-ai-agentserver-agentframework>=1.0.0b4",
    "python-dotenv>=1.1.1",
    "tenacity>=8.0.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["pm_buddy"]